--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "qrcode": "^1.5.0",
     "ttl": "^1.3.1",
     "uuid": "^8.3.2",
